Committing Parallel STL 20181004 open source release

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,16 @@
 ------------------------------------------------------------------------
 The list of most significant changes made over time in Parallel STL.
 
+Parallel STL 20181004 release
+PSTL_VERSION == 201
+
+Features / APIs:
+
+- Fixed a number of algorithms to work with mutable function objects.
+- Fixed algorithms to throw std::bad_alloc when additional memory cannot
+    be obtained.
+
+------------------------------------------------------------------------
 Parallel STL release within Intel(R) Parallel Studio XE 2019
 PSTL_VERSION == 200
 
