--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,18 @@
 ------------------------------------------------------------------------
 The list of most significant changes made over time in Parallel STL.
 
+Parallel STL 20190522 release
+PSTL_VERSION == 207
+
+Features / APIs:
+
+- Added for_loop algorithm family from the Parallelism TS v2
+    (working draft N4808) with support for sequenced_policy
+    and parallel_policy.
+- The following algorithms support parallel_policy with forward
+    iterators: transform, for_each.
+
+------------------------------------------------------------------------
 Parallel STL release within Intel(R) Parallel Studio XE 2019 Update 4
 PSTL_VERSION == 206
 
